--- a/UXPTightener/manifest.json
+++ b/UXPTightener/manifest.json
@@ -1,6 +1,6 @@
 {
-  "id": "Test-xu7bjd",
-  "name": "TightenerTest",
+  "id": "UXPTightenerSample",
+  "name": "UXPTightenerSample",
   "version": "1.0.0",
   "main": "index.html",
   "host": {
