--- a/CreativeDeveloperTools_UXP/manifest.json
+++ b/CreativeDeveloperTools_UXP/manifest.json
@@ -1,12 +1,18 @@
 {
-  "id": "CreativeDeveloperTools_UXP_Sample",
-  "name": "CreativeDeveloperTools_UXP_Sample",
+  "id": "creative-developer-tools-uxp-sample",
+  "name": "creative-developer-tools-uxp-sample",
   "version": "0.0.1",
   "main": "index.html",
-  "host": {
-    "app": "ID",
-    "minVersion": "19.0"
-  },
+  "host": [ 
+    {
+      "app": "ID",
+      "minVersion": "19.0"
+    },
+    {
+      "app": "PS",
+      "minVersion": "23.0"
+    }
+  ],
   "manifestVersion": 5,
   "requiredPermissions": {
     "network": {
@@ -16,11 +22,6 @@
     }
   },
   "entrypoints": [
-    {
-      "type": "command",
-      "id": "showAlert",
-      "label": "Show alert"
-    },
     {
       "type": "panel",
       "id": "showPanel",
@@ -41,7 +42,7 @@
         "height": 300
       },
       "label": {
-        "default": "Show panel"
+        "default": "Creative Developer Tools Sample"
       },
       "icons": [
         {
