--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-/UXPTightenerDaemonDaemon/Linux/
-/UXPTightenerDaemon/Linux_ARM64/
-/UXPTightenerDaemon/Mac/
-/UXPTightenerDaemon/Windows/
-/UXPTightenerDaemon/Windows_ARM64/
 CreativeDeveloperTools_*.zip
+/node_modules
+/out
+/package-lock.json
