Do not commit compiled versions

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ CreativeDeveloperTools_*.zip
 /node_modules
 /out
 /package-lock.json
+creative-developer-tools-uxp-sample_ID.ccx
+creative-developer-tools-uxp-sample_PS.ccx
